# xblock-accordion

./: .coveragerc  .gitignore  CHANGELOG.rst  Dockerfile  MANIFEST.in  Makefile  README.rst  catalog-info.yaml  manage.py  pyproject.toml  setup.py  tox.ini  translation_settings.py
.github/workflows/: ci-frontend.yml  ci.yml
accordion/: __init__.py  accordion.py  translation
accordion/.tx/: config
accordion/conf/locale/en/LC_MESSAGES/: django-partial.po  text.po
accordion/public/: student-ui.css  student-ui.js  studio-ui.css  studio-ui.js
accordion/static/css/: accordion.css
accordion/static/html/: accordion.html
accordion/static/js/src/: accordion.js
docs/: Makefile  conf.py  index.rst  make.bat  testing.rst
frontend/: package-lock.json  package.json  student.html  studio.html  vitest.config.ts
frontend/src/student-ui/: dev-preview.ts  student-ui.tsx  style.scss
frontend/src/studio-ui/: TinyMceEditor.tsx  editing-page.tsx  index.tsx  style.scss  styling-page.tsx
requirements/: base.in  base.txt  ci.txt  constraints.txt  dev.txt  doc.txt  quality.txt  test.txt
tests/: test_accordion.py
